fix(storybook): extra padding on dark mode

--- a/assets/css/storybook.css
+++ b/assets/css/storybook.css
@@ -12,7 +12,7 @@
     font-family: ui-sans-serif, system-ui;
   } */
 
-	.dark .theme-dark {
-		@apply py-8 bg-slate-900;
+	.dark .lsb:has(> .theme-dark) {
+		@apply bg-slate-900;
 	}
 }
